# tensorflow_cc

./: README.md
example/: CMakeLists.txt
tensorflow_cc/cmake/: build_tensorflow.sh.in
